# git-version

./: .justfile  .pre-commit-config.yaml  Dockerfile  README.md  action.yaml  entrypoint.sh  git_version.sh  pyproject.toml
.devcontainer/: Dockerfile
.github/workflows/: prd-build.yaml
.github/workflows/templates/tests/: action.yaml
src/git_version/: _config.py  _const.py  _core.py  cli.py
tests/: test_config.py  test_core.py  test_git_version.py
